Added processor state display and refresh to processor status dashboard.

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -405,19 +405,25 @@ div.legendIcon {float: left; margin-right: 3px; width: 16px; height: 12px; borde
     border-radius: 4px; -moz-border-radius: 4px; -webkit-border-radius: 4px;
 }
 
-.processorStatusButtons {
+.processorStatusControls {
+    padding: 5px 6px;
     float: right;
-    padding: 0;
+    font-size: 11px;
+    font-family: verdana, arial, helvetica, sans-serif;
+    line-height: 11px; 
+    text-align: left;
+    vertical-align: top;
+    color: #444;
 }
-.processorStatusButtons button {
-    float: right;
-    border: 0;
-    padding: 0;
-    background: none no-repeat scroll 5px 50% #FFF;
+.processorStatusControls img {
+    width: 16px;
+    height: 16px;
+    vertical-align: middle;
 }
-.processorStatusButtons button div {
+.processorStatusButton {
     color: #333; cursor: pointer; font-size: 10px; font-weight: bold; margin: 1px; overflow: visible;
     line-height: 14px; border-style: solid; border-color: #DDD #BBB #BBB #DDD; border-width: 1px 2px 2px 1px;
     background: none no-repeat scroll 5px 50% #FFF; white-space: nowrap; padding: 6px 6px 6px 6px;
     border-radius: 4px; -moz-border-radius: 4px; -webkit-border-radius: 4px;
 }
+.processorStatusButton:disabled { filter: alpha(opacity=50); opacity: 0.5; -moz-opacity: 0.50; background-color: inherit !important; border-color: inherit; color: inherit; cursor: default; }
